Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/4972073/T4972073.out
T4972073.java:18:80: compiler.err.repeated.interface
T4972073.java:24:68: compiler.err.repeated.interface
2 errors
